# rustyping

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
src/: lib.rs  main.rs
