cargo-features = ["strip"]

[package]
name = "rustyping"
version = "2.0.0"
edition = "2018"

[features]
unrestricted = []

[[bin]]
name = "rp"
path = "src/main.rs"

[profile.release]
strip = "symbols"

[dependencies]
ansi_term = "0.12"
clap = "2"
ctrlc = { version = "3.1", features = ["termination"] }
hsl = "0.1"
nix = "0.21"
pnet = "0.28"
rand = "0.8"
slog = "2.7"
slog-term = "2.8"
